--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/validator": "^13.11.10",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
+    "joi": "^17.13.1",
+    "mongoose": "^8.4.0",
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
